missing class for main

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <title>Coffede Shop</title>
   </head>
   <body>
-    <p>test</p>
     <div class="page">
       <header class="header"></header>
-      <main>
+      <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
         <section class="menu"></section>
