--- a/index.html
+++ b/index.html
@@ -22,7 +22,44 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav header__nav">
+          <img
+            src="../images/logo_coffeeshop_dark.svg"
+            alt="Triple Espresso"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li class="nav__link">Recipes</li>
+            <li class="nav__link">Book a table</li>
+            <li class="nav__link">Menu</li>
+            <li class="nav__link">Contacts</li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty coffee</span> in the
+          Triple Peaks Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+        <img
+          src="../images/inside_coffee_shop.png"
+          alt="Inside Coffee Shop"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div class="header__paragraph-wrapper">
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
+          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Triple Peaks
+          </p>
+        </div>
+      </header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
