--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             class="nav__logo"
           />
           <ul class="nav__links">
-            <li class="nav__link">Recipes</li>
+            <li class="nav__link" href="#recipes-section">Recipes</li>
             <li class="nav__link">Book a table</li>
             <li class="nav__link">Menu</li>
             <li class="nav__link">Contacts</li>
@@ -61,7 +61,45 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes" id="recipes-section">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
+          <ul class="recipes__video">
+            <li class="recipes__video-section">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=7z22o8OlHyVB-lzo"
+                title="The Ultimate AeroPress Technique"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-title-wrapper">
+                <p class="recipes__video-caption">Aeropress recipe</p>
+                <p class="recipes__video-caption">~5 min</p>
+              </div>
+            </li>
+            <li class="recipes__video-section">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=pOF9W9bCeEjLSicr"
+                title="The Ultimate French Press Technique"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-title-wrapper">
+                <p class="recipes__video-caption">French press recipe</p>
+                <p class="recipes__video-caption">~15 min</p>
+              </div>
+            </li>
+          </ul>
+        </section>
         <section class="reservation"></section>
         <section class="menu"></section>
         <section class="about"></section>
