--- a/index.html
+++ b/index.html
@@ -106,7 +106,55 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="reservation-section"></section>
+        <section class="reservation" id="reservation-section">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="form reservation__form">
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Name *</label>
+              <input
+                type="text"
+                class="form__input"
+                name="name-surname"
+                id="name"
+                placeholder="Name Surname"
+                required
+              />
+              <label class="form__label" for="num-guest"
+                >Number of guests *</label
+              >
+              <input
+                type="number"
+                class="form__input"
+                name="number-guest"
+                id="num-guest"
+                placeholder="1-8"
+                required
+              />
+              <label class="form__label" for="date-time">Date & time *</label>
+              <input
+                type="datetime-local"
+                class="form__input"
+                name="datetime-local"
+                id="date-time"
+                required
+              />
+              <label class="form__label" for="email">Your email *</label>
+              <input
+                type="email"
+                class="form__input"
+                name="email"
+                id="email"
+                placeholder="email@email.com"
+                required
+              />
+            </fieldset>
+            <button type="submit" class="form__button">Book a table</button>
+            <label class="form__label form__label_type_checkbox">
+              <input type="checkbox" class="form__checkbox" /> I agree with the
+              terms of use</label
+            >
+          </form>
+        </section>
         <section class="menu" id="menu-section"></section>
         <section class="about" id="about-section"></section>
       </main>
