--- a/index.html
+++ b/index.html
@@ -253,7 +253,25 @@
             </div>
           </div>
         </section>
-        <section class="about" id="about-section"></section>
+        <section class="about" id="about-section">
+          <h2 class="about__title">About the coffee shop</h2>
+          <div class="about__content">
+            <span class="about__paragraph"
+              >Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.</span
+            >
+            <span class="about__paragraph"
+              >Our main mission is keeping guests cozy and energized.</span
+            >
+            <span class="about__paragraph"
+              >Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!</span
+            >
+          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
