--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Coffede Shop</title>
+    <title>Coffee Shop</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
         <nav class="nav header__nav">
           <img
-            src="../images/logo_coffeeshop_dark.svg"
+            src="./images/logo_coffeeshop_dark.svg"
             alt="Triple Espresso"
             class="nav__logo"
           />
@@ -52,7 +52,7 @@
           the cozy vibes to help you get creative.
         </p>
         <img
-          src="../images/inside_coffee_shop.png"
+          src="./images/inside_coffee_shop.png"
           alt="Inside Coffee Shop"
           class="header__image"
         />
